Fix blog column alignment
- Previously the balance felt off and a bit left-heavy

--- a/themes/codi-ng/static/css/style.css
+++ b/themes/codi-ng/static/css/style.css
@@ -27,6 +27,14 @@ body {
   }
 }
 
+/* Align blog column in center of page in large display */
+@media (min-width: 1200px) {
+  .container {
+      width: 1140px;
+      max-width: 100%;
+  }
+}
+
 .end-of-section {
   margin-bottom: 1rem;
 }
